--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -16,7 +16,8 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/interface_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    settings:initialExpandedChildrenCount="4">
 
     <PreferenceCategory
         android:key="theme_customization_category"
@@ -37,9 +38,9 @@
 
     <PreferenceCategory
         android:key="quick_settings_category"
-        android:title="@string/qs_panel_alpha_title">
+        android:title="@string/theme_qspanel_title">
 
-        <com.ion.ionizer.preferences.CustomSeekBarPreference
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="qs_panel_alpha"
             android:title="@string/qs_panel_alpha_title"
             android:summary="@string/qs_panel_alpha_summary"
@@ -49,21 +50,43 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-                android:key="dashboard_category"
-                android:title="@string/dashboard_category">
+        android:key="dpi_category"
+        android:title="@string/dpi_category_title">
+
+        <Preference
+            android:key="font_size"
+            android:title="@string/title_font_size"
+            android:fragment="com.android.settings.display.ToggleFontSizePreferenceFragment"
+            settings:controller="com.android.settings.display.FontSizePreferenceController" />
+
+        <com.android.settings.display.ScreenZoomPreference
+            android:key="display_settings_screen_zoom"
+            android:title="@string/screen_zoom_title"
+            android:fragment="com.android.settings.display.ScreenZoomSettings"
+            settings:searchable="false"/>
+
+        <com.android.settings.display.DensityPreference
+            android:key="density"
+            android:title="@string/developer_smallest_width" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="dashboard_category"
+        android:title="@string/dashboard_category">
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-                android:key="enable_conditions"
-                android:title="@string/dashboard_conditions_title"
-                android:summaryOn="@string/summary_dashboard_conditions_enabled"
-                android:summaryOff="@string/summary_dashboard_conditions_disabled"
-                android:defaultValue="true" />
+            android:key="enable_conditions"
+            android:title="@string/dashboard_conditions_title"
+            android:summaryOn="@string/summary_dashboard_conditions_enabled"
+            android:summaryOff="@string/summary_dashboard_conditions_disabled"
+            android:defaultValue="true" />
 
-         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-                android:key="enable_suggestions"
-                android:title="@string/dashboard_suggestions_title"
-                android:summaryOn="@string/summary_dashboard_suggestions_enabled"
-                android:summaryOff="@string/summary_dashboard_suggestions_disabled"
-                android:defaultValue="true" />
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="enable_suggestions"
+            android:title="@string/dashboard_suggestions_title"
+            android:summaryOn="@string/summary_dashboard_suggestions_enabled"
+            android:summaryOff="@string/summary_dashboard_suggestions_disabled"
+            android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
