--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -22,6 +22,7 @@
     <Preference
         android:key="heads_up_notifications"
         android:title="@string/heads_up_notifications"
+        android:summary="@string/heads_up_notifications_summary"
         android:fragment="com.ion.ionizer.fragments.HeadsUpSettings" />
 
     <PreferenceCategory
