--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -18,11 +18,38 @@
     android:title="@string/quicksettings_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-        android:key="quick_settings_vibrate"
-        android:title="@string/quick_settings_vibrate_title"
-        android:summary="@string/quick_settings_vibrate_summary"
-        android:defaultValue="false"/>
+    <PreferenceCategory
+        android:key="quick_tiles"
+        android:title="@string/quick_tile_title">
+
+        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+            android:key="quick_settings_vibrate"
+            android:title="@string/quick_settings_vibrate_title"
+            android:summary="@string/quick_settings_vibrate_summary"
+            android:defaultValue="false"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="quick_header"
+        android:title="@string/quick_header_title">
+
+        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+            android:key="qs_show_brightness"
+            android:title="@string/qs_show_brightness_title"
+            android:summary="@string/qs_show_brightness_summary"
+            android:defaultValue="true" />
+
+        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+            android:key="qs_brightness_position_bottom"
+            android:title="@string/qs_brightness_position_bottom_title"
+            android:summary="@string/qs_brightness_position_bottom_summary"
+            android:defaultValue="false"
+            android:dependency="qs_show_brightness" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="quick_footer"
+        android:title="@string/quick_footer_title">
 
         <com.ion.ionizer.preferences.SecureSettingSwitchPreference
             android:key="qs_show_secure"
@@ -41,17 +68,5 @@
             android:title="@string/qs_footer_settings_title"
             android:summary="@string/qs_footer_settings_summary"
             android:defaultValue="true"/>
-
-    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-        android:key="qs_show_brightness"
-        android:title="@string/qs_show_brightness_title"
-        android:summary="@string/qs_show_brightness_summary"
-        android:defaultValue="true" />
-
-    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-        android:key="qs_brightness_position_bottom"
-        android:title="@string/qs_brightness_position_bottom_title"
-        android:summary="@string/qs_brightness_position_bottom_summary"
-        android:defaultValue="false"
-        android:dependency="qs_show_brightness" />
+    </PreferenceCategory>
 </PreferenceScreen>
