--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -193,7 +193,7 @@
     <string name="keyboard_rotation_toggle_title">Auto keyboard rotation</string>
     <string name="keyboard_rotation_toggle_summary">Force auto-rotate when keyboard is shown</string>
     <string name="keyboard_rotation_timeout_title">Auto-rotate timeout</string>
-    <string name="keyboard_rotation_timeout_summary">Disables auto-rotate sensor <xliff:g id="rotate_timeout">%1$s</xliff:g> seconds after keyboard is hidden</string>
+    <string name="keyboard_rotation_timeout_summary">Disables auto-rotate sensor in <xliff:g id="rotate_timeout">%1$s</xliff:g> seconds after keyboard is hidden</string>
     <string name="keyboard_rotation_dialog">This feature forces auto-rotate to turn on temporarily while the keyboard is shown.  It has no effect when auto-rotate is already enabled.</string>
     <string name="show_enter_key_title">Show enter key</string>
     <string name="show_enter_key_summary">Force keyboard to show enter instead of emoticon key</string>
@@ -264,4 +264,8 @@
     <string name="torch_power_button_gesture_dt">Double tap power button</string>
     <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
     <string name="torch_power_button_gesture_lp">Long press power button</string>
+
+    <!-- Charging animation -->
+    <string name="charging_animation_title">Charging animation</string>
+    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
 </resources>
