--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -245,6 +245,8 @@
     <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
     <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
     <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
+    <string name="qs_battery_location_bar">Battery in QS Header</string>
+    <string name="qs_battery_location_bar_summary">Shows battery in QS Header</string>
 
     <!-- Volume Steps Fragment -->
     <string name="volume_steps_title">Volume steps</string>
