--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -270,4 +270,8 @@
     <!-- Charging animation -->
     <string name="charging_animation_title">Charging animation</string>
     <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
+
+    <!-- Batter percentage with estimate -->
+    <string name="battery_pct_with_estimate_title">Battery Percent</string>
+    <string name="battery_pct_with_estimate_summary">Shows battery percentage in QS along with estimate</string>
 </resources>
