--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -39,6 +39,12 @@
             android:summary="@string/qs_battery_location_bar_summary"
             android:defaultValue="false" />
 
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="battery_pct_with_estimate"
+            android:title="@string/battery_pct_with_estimate_title"
+            android:summary="@string/battery_pct_with_estimate_summary"
+            android:defaultValue="false" />
+
         <com.ion.ionizer.preferences.SecureSettingSwitchPreference
             android:key="qs_show_brightness"
             android:title="@string/qs_show_brightness_title"
