Add perf for QS customization

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -274,4 +274,13 @@
     <!-- Batter percentage with estimate -->
     <string name="battery_pct_with_estimate_title">Battery Percent</string>
     <string name="battery_pct_with_estimate_summary">Shows battery percentage in QS along with estimate</string>
+
+    <!-- Quick settings tiles columns and rows config -->
+    <string name="qs_rows_portrait_title">Rows (Portrait)</string>
+    <string name="qs_rows_landscape_title">Rows (Landscape)</string>
+    <string name="qs_columns_portrait_title">Columns (Portrait)</string>
+    <string name="qs_columns_landscape_title">Columns (Landscape)</string>
+    <string name="sysui_qqs_count_title">Columns (Quickbar)</string>
+    <string name="qs_tile_title_visibility_title">Tile title</string>
+    <string name="qs_tile_title_visibility_summary">Display title below each tile</string>
 </resources>
