--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -16,7 +16,34 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/quicksettings_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    settings:initialExpandedChildrenCount="5">
+
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="qs_columns_quickbar"
+        android:title="@string/sysui_qqs_count_title"
+        android:max="8"
+        android:min="6"
+        android:defaultValue="6"
+        android:persistent="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="qs_columns_portrait"
+        android:title="@string/qs_columns_portrait_title"
+        android:max="8"
+        android:min="3"
+        settings:units=""
+        android:defaultValue="3"
+        android:persistent="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+        android:key="qs_columns_landscape"
+        android:title="@string/qs_columns_landscape_title"
+        android:max="8"
+        android:min="3"
+        settings:units=""
+        android:defaultValue="4"
+        android:persistent="false" />
 
     <PreferenceCategory
         android:key="quick_tiles"
@@ -27,6 +54,12 @@
             android:title="@string/quick_settings_vibrate_title"
             android:summary="@string/quick_settings_vibrate_summary"
             android:defaultValue="false"/>
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="qs_tile_title_visibility"
+            android:title="@string/qs_tile_title_visibility_title"
+            android:summary="@string/qs_tile_title_visibility_summary"
+            android:defaultValue="true" />
     </PreferenceCategory>
 
     <PreferenceCategory
