--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -115,6 +115,13 @@
             android:summary="@string/qs_brightness_position_bottom_summary"
             android:defaultValue="false"
             android:dependency="qs_show_brightness" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="qs_show_brightness_icon"
+            android:title="@string/brightness_icon_title"
+            android:summary="@string/brightness_icon_summary"
+            android:dependency="qs_show_brightness"
+            android:defaultValue="true"/>
     </PreferenceCategory>
 
     <PreferenceCategory
