--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -62,6 +62,7 @@
     <string name="quick_footer_title">Footer</string>
     <string name="status_icons_title">Icons</string>
     <string name="navbar_invert_layout_summary">Invert Navigation button layout</string>
+    <string name="buttons_summary">Customize hardware button actions</string>
 
     <!-- Dashboard conditions--> 
     <string name="dashboard_category">Dashboard options</string> 
