--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -32,8 +32,9 @@
             android:key="lockscreen_media_blur"
             android:title="@string/lockscreen_media_blur_title"
             android:summary="@string/lockscreen_media_blur_summary"
-            android:max="2500"
-            settings:min="1"
+            android:max="100"
+            settings:min="4"
+            android:defaultValue="100"
             android:dependency="lockscreen_media_metadata"
             android:persistent="false" />
     </PreferenceCategory>
