--- a/res/xml/buttons_settings.xml
+++ b/res/xml/buttons_settings.xml
@@ -22,6 +22,10 @@
             android:key="hardware_keys"
             android:title="@string/hardware_keys_category" >
 
+        <SwitchPreference
+            android:key="hardware_keys_disable"
+            android:title="@string/hardware_keys_disable_title" />
+
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="haptic_on_action_key"
             android:title="@string/haptic_on_action_title"
