--- a/res/xml/ion_settings_navigation.xml
+++ b/res/xml/ion_settings_navigation.xml
@@ -18,6 +18,13 @@
     android:title="@string/navigation_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <SwitchPreference
+        android:key="enable_nav_bar"
+        android:title="@string/enable_navbar_title"
+        android:summary="@string/enable_navbar_summary"
+        android:defaultValue="true"
+        android:persistent="false" />
+
     <com.ion.ionizer.preferences.SecureSettingSwitchPreference
         android:key="sysui_nav_bar_inverse"
         android:title="@string/navbar_invert_layout_title"
