--- a/res/xml/ion_settings_navigation.xml
+++ b/res/xml/ion_settings_navigation.xml
@@ -27,7 +27,7 @@
     <Preference
         android:fragment="com.ion.ionizer.fragments.ButtonsSettings"
         android:icon="@drawable/ic_buttons"
-        android:key="buttons"
+        android:key="hw_buttons"
         android:summary="@string/buttons_summary"
         android:title="@string/buttons_title" />
 </PreferenceScreen>
