--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -19,11 +19,12 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <!-- Heads up -->
-    <Preference
-        android:key="heads_up_notifications"
+    <com.ion.ionizer.preferences.GlobalSettingMasterSwitchPreference
+        android:key="heads_up_notifications_enabled"
         android:title="@string/heads_up_notifications"
         android:summary="@string/heads_up_notifications_summary"
-        android:fragment="com.ion.ionizer.fragments.HeadsUpSettings" />
+        android:fragment="com.ion.ionizer.fragments.HeadsUpSettings"
+        android:defaultValue="true" />
 
     <PreferenceCategory
         android:key="incall_vib_options"
