--- a/res/drawable/ic_custom_seekbar_minus.xml
+++ b/res/drawable/ic_custom_seekbar_minus.xml
@@ -14,8 +14,12 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/list_item_bg_pressed" android:state_pressed="true"/>
-    <item android:drawable="@color/transparent" android:state_activated="true"/>
-    <item android:drawable="@color/transparent"/>
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24.0dp"
+        android:height="24.0dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0" >
+    <path
+        android:fillColor="?android:attr/colorControlNormal"
+        android:pathData="M14.102040767669678,13 H0.10204076766967773 V11 H14.102040767669678 V13 z" />
+</vector>
