--- a/res/values/ion_attrs.xml
+++ b/res/values/ion_attrs.xml
@@ -17,9 +17,9 @@
     <!-- Base attributes available to CustomSeekBarPreference. -->
     <declare-styleable name="CustomSeekBarPreference">
         <attr name="interval" format="integer" />
-        <attr name="min" format="integer" />
+        <attr name="showSign" format="boolean" />
         <attr name="units" format="string|reference" />
-        <attr name="defaultText" format="string|reference" />
+        <attr name="continuousUpdates" format="boolean" />
     </declare-styleable>
 
     <!-- Value to pass to callback when restore button is pressed -->
