--- a/res/values/ion_colors.xml
+++ b/res/values/ion_colors.xml
@@ -15,6 +15,5 @@
 -->
 <resources>
     <!-- ColorPicker -->
-    <color name="list_background_pressed">#ff555555</color>
-    <color name="transparent">@android:color/transparent</color>
+    <color name="disabled_text_color">#66000000</color>
 </resources>
