--- a/res/values/ion_dimens.xml
+++ b/res/values/ion_dimens.xml
@@ -14,8 +14,8 @@
      limitations under the License.
 -->
 <resources>
-    <dimen name="picker_circle_preview_size">26dp</dimen>
-    <dimen name="alert_dialog_padding_material">20dp</dimen>
+    <!-- Color Picker -->
+    <dimen name="oval_notification_size">26dp</dimen>
 
     <!-- Shortcut picker -->
     <dimen name="shortcut_picker_left_padding">70dip</dimen>
