--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -64,22 +64,6 @@
     <string name="navbar_invert_layout_summary">Invert Navigation button layout</string>
     <string name="buttons_summary">Customize hardware button actions</string>
 
-    <!-- Dashboard conditions--> 
-    <string name="dashboard_category">Dashboard options</string> 
-    <string name="dashboard_conditions_title">Dashboard conditions</string> 
-    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string> 
-    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string> 
-    <string name="dashboard_suggestions_title">Dashboard suggestions</string> 
-    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string> 
-    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string> 
-
-    <!-- General strings -->
-    <string name="ok">OK</string>
-    <string name="reset">Reset</string>
-    <string name="cancel">Cancel</string>
-    <string name="save">Save</string>
-    <string name="attention">Attention</string>
-
     <!-- Color Picker -->
     <string name="dialog_color_picker">Color Picker</string>
     <string name="press_color_to_apply">Press on color below to apply</string>
@@ -89,6 +73,28 @@
     <string name="hex_hint">#ff000000</string>
     <string name="set">Set</string>
     <string name="color_default">Default</string>
+
+    <!-- Custom seekbar -->
+    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
+    <string name="custom_seekbar_default_value">Default</string>
+    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
+    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
+
+    <!-- General strings -->
+    <string name="ok">OK</string>
+    <string name="reset">Reset</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="attention">Attention</string>
+
+    <!-- Dashboard conditions-->
+    <string name="dashboard_category">Dashboard options</string>
+    <string name="dashboard_conditions_title">Dashboard conditions</string>
+    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
+    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
+    <string name="dashboard_suggestions_title">Dashboard suggestions</string>
+    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
+    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
 
     <!-- Volume rocker music control -->
     <string name="volume_rocker_music_controls_title">Playback control</string>
