--- a/res/xml/buttons_settings.xml
+++ b/res/xml/buttons_settings.xml
@@ -15,8 +15,9 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/buttons_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    settings:initialExpandedChildrenCount="6" >
 
     <PreferenceCategory
             android:key="hardware_keys"
@@ -26,13 +27,13 @@
             android:key="hardware_keys_disable"
             android:title="@string/hardware_keys_disable_title" />
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="haptic_on_action_key"
             android:title="@string/haptic_on_action_title"
             android:summary="@string/haptic_on_action_summary"
             android:defaultValue="false" />
 
-    <com.ion.ionizer.preferences.CustomSeekBarPreference
+        <com.ion.ionizer.preferences.CustomSeekBarPreference
             android:key="button_brightness"
             android:title="@string/button_brightness_title"
             android:max="255"
@@ -45,7 +46,7 @@
             android:title="@string/button_brightness_sw_title"
             android:persistent="false" />
 
-    <ListPreference
+        <ListPreference
             android:dialogTitle="@string/backlight_timeout_title"
             android:entries="@array/backlight_timeout_entries"
             android:entryValues="@array/backlight_timeout_values"
@@ -53,17 +54,16 @@
             android:persistent="false"
             android:title="@string/backlight_timeout_title" />
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="button_backlight_only_when_pressed"
             android:title="@string/button_backlight_on_touch_only_title"
             android:summary="@string/button_backlight_on_touch_only_summary"
             android:defaultValue="false" />
-
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="back_key"
-        android:title="@string/hardware_keys_back_key_title" >
+            android:key="back_key"
+            android:title="@string/hardware_keys_back_key_title" >
 
         <com.ion.ionizer.preferences.ActionPreference
             android:key="hwkeys_button_back_single_tap"
@@ -85,8 +85,8 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="home_key"
-        android:title="@string/hardware_keys_home_key_title" >
+            android:key="home_key"
+            android:title="@string/hardware_keys_home_key_title" >
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="allow_incall_home"
@@ -111,12 +111,11 @@
             android:summary="@string/hardware_keys_double_tap_summary"
             android:title="@string/hardware_keys_double_tap_title" >
         </com.ion.ionizer.preferences.ActionPreference>
-
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="app_switch_key"
-        android:title="@string/hardware_keys_appswitch_key_title" >
+            android:key="app_switch_key"
+            android:title="@string/hardware_keys_appswitch_key_title" >
 
         <com.ion.ionizer.preferences.ActionPreference
             android:key="hwkeys_button_overview_single_tap"
@@ -135,7 +134,6 @@
             android:summary="@string/hardware_keys_double_tap_summary"
             android:title="@string/hardware_keys_double_tap_title" >
         </com.ion.ionizer.preferences.ActionPreference>
-
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -159,7 +157,6 @@
             android:summary="@string/hardware_keys_double_tap_summary"
             android:title="@string/hardware_keys_double_tap_title" >
         </com.ion.ionizer.preferences.ActionPreference>
-
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -183,7 +180,5 @@
             android:summary="@string/hardware_keys_double_tap_summary"
             android:title="@string/hardware_keys_double_tap_title" >
         </com.ion.ionizer.preferences.ActionPreference>
-
     </PreferenceCategory>
-
 </PreferenceScreen>
