--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -16,6 +16,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/lockscreen_title"
+    xmlns:ionionizer="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     settings:initialExpandedChildrenCount="3">
 
@@ -35,6 +36,8 @@
             android:max="100"
             settings:min="4"
             android:defaultValue="100"
+            settings:interval="2"
+            ionionizer:units="%"
             android:dependency="lockscreen_media_metadata"
             android:persistent="false" />
     </PreferenceCategory>
