Add battery styles and customizations for Android 10 [2/2]

--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -102,6 +102,13 @@
             android:summary="@string/battery_pct_with_estimate_summary"
             android:defaultValue="false" />
 
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="qs_battery_mode"
+            android:title="@string/battery_percentage_title"
+            android:entries="@array/qs_battery_mode_entries"
+            android:entryValues="@array/qs_battery_mode_values"
+            android:defaultValue="1" />
+
         <com.ion.ionizer.preferences.SecureSettingSwitchPreference
             android:key="qs_show_brightness"
             android:title="@string/qs_show_brightness_title"
