--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -280,6 +280,8 @@
     <string name="torch_power_button_gesture_dt">Double tap power button</string>
     <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
     <string name="torch_power_button_gesture_lp">Long press power button</string>
+    <string name="torch_long_press_power_timeout_title">Automatically turn torch off</string>
+    <string name="torch_long_press_power_timeout_summary">Note: 0 equals never(off)</string>
 
     <!-- Charging animation -->
     <string name="charging_animation_title">Charging animation</string>
