Make screenrecord in the power menu configurable [2/2]

--- a/res/xml/power_menu.xml
+++ b/res/xml/power_menu.xml
@@ -43,6 +43,12 @@
         android:summary="@string/powermenu_screenshot_summary"
         android:defaultValue="false" />
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="powermenu_screenrecord"
+        android:title="@string/powermenu_screenrecord_title"
+        android:summary="@string/powermenu_screenrecord_summary"
+        android:defaultValue="false" />
+
     <SwitchPreference
         android:key="powermenu_torch"
         android:title="@string/powermenu_torch"
@@ -90,6 +96,13 @@
             android:title="@string/powermenu_screenshot_title"
             android:summary="@string/powermenu_ls_screenshot_summary"
             android:dependency="powermenu_screenshot"
+            android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="powermenu_ls_screenrecord"
+            android:title="@string/powermenu_screenrecord_title"
+            android:summary="@string/powermenu_ls_screenrecord_summary"
+            android:dependency="powermenu_screenrecord"
             android:defaultValue="false" />
 
         <SwitchPreference
