--- a/res/xml/ion_settings_buttons.xml
+++ b/res/xml/ion_settings_buttons.xml
@@ -16,7 +16,8 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/buttons_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    settings:initialExpandedChildrenCount="4" >
 
     <PreferenceCategory
         android:key="key_vol"
